Fri Oct  2 21:00:44 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/dds/dcps_java_optional.mpb:
          
          Attempted for for MPC dependency issues for Java bindings on
          Windows platforms.

Fri Oct  2 19:32:24 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/src/META-INF/ra.xml:

          Updated LICENSE verbiage.

Fri Oct  2 19:19:54 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/idl2jni_visitor.h:
        * java/idl2jni/codegen/idl2jni_visitor.cpp:

          Added additional virtual functions added by recent commit to
          DOC trunk.

Wed Sep 30 05:03:35 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/dds/dcps_java_optional.mpb:

          Attempted for for MPC dependency issues for Java bindings.

Tue Sep 29 16:39:52 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/TestFramework/TestFramework_T.h:
        * tests/DCPS/TestFramework/TestFramework_T.cpp:

          Fixes for Windows and Linux hosts.

Mon Sep 28 21:13:53 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/DestinationOrder/TestCase.h:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:
        * tests/DCPS/TestFramework/TestFramework_T.h:
        * tests/DCPS/TestFramework/TestFramework_T.cpp:

          TestFramework updates; fixed template issues on non-Solaris
          platforms.

Thu Sep 24 21:33:28 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/DestinationOrder/DestinationOrder.mpc:
        * tests/DCPS/DestinationOrder/TestCase.h:
        * tests/DCPS/DestinationOrder/TestCase.cpp:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.idl:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:
